# vulkan-framework

./: .gitignore  Cargo.toml  README.md  TODO  tree_viewer.py
engine/: Cargo.toml
engine/embed/: stub.dds
engine/shaders/: aabb.glsl  config.glsl  gbuffer.glsl  materials.glsl  math.glsl  morton.glsl  random.glsl  rt_descriptor_set.glsl  rt_helpers.glsl  sphere_points.glsl  status.glsl  surfel.glsl  textures.glsl
engine/shaders/directional_lights/: directional_lights.rchit  directional_lights.rgen  directional_lights.rmiss
engine/shaders/final_rendering/: final_rendering.frag  final_rendering.vert
engine/shaders/global_illumination/: global_illumination.rchit  global_illumination.rgen  global_illumination.rmiss  morton.glsl  payload.glsl  surfel.glsl  surfel_discovery.comp
engine/shaders/mesh_rendering/: mesh_rendering.frag  mesh_rendering.vert
engine/shaders/surfel_discovery/: surfel_discovery.comp
engine/shaders/surfel_reorder/: bvh_aabb.comp  surfel_bvh.comp  surfel_morton.comp  surfel_reorder.comp
engine/shaders/surfel_rt/: surfel_rt.rchit  surfel_rt.rgen  surfel_rt.rmiss
engine/shaders/surfel_spawn/: payload.glsl  surfel_spawn.rchit  surfel_spawn.rgen
engine/shaders/surfel_vpl/: surfel_vpl.comp
engine/src/: lib.rs  main.rs
engine/src/core/: hdr.rs  mod.rs
engine/src/rendering/: memory.rs  mesh.rs  mod.rs  rendering_dimensions.rs  resources.rs  (+3 more)
examples/: Cargo.toml  run_all.sh
examples/src/: lib.rs
vulkan_framework/: Cargo.toml
vulkan_framework/src/: acceleration_structure.rs  any_hit_shader.rs  binding_tables.rs  buffer.rs  callable_shader.rs  clear_values.rs  closest_hit_shader.rs  command_buffer.rs  command_pool.rs  compute_pipeline.rs  compute_shader.rs  deferred_host_operations.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  dynamic_rendering.rs  fence.rs  fragment_shader.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  image_view.rs  instance.rs  intersection_shader.rs  lib.rs  memory_allocator.rs  memory_barriers.rs  memory_heap.rs  memory_management.rs  memory_pool.rs  memory_requiring.rs  miss_shader.rs  pipeline_layout.rs  pipeline_stage.rs  prelude.rs  push_constant_range.rs  queue.rs  queue_family.rs  raygen_shader.rs  (+14 more)
vulkan_framework_glfw_glue/: Cargo.toml
vulkan_framework_glfw_glue/src/: window.rs
(+53 files in other folders)
