
[package]
name = "examples"
version = "0.0.1"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"

[dependencies]
vulkan_framework = { path = "../vulkan_framework" }
vulkan_framework_sdl2_glue = { path = "../vulkan_framework_sdl2_glue" }
vulkan_framework_glfw_glue = { path = "../vulkan_framework_glfw_glue" }
inline-spirv = "0.1.6"
"sdl2" = "*"
smallvec = "^1"
