
[package]
name = "examples"
version = "0.0.1"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"

[dependencies]
vulkan_framework = { path = "../vulkan_framework" }
vulkan_framework_sdl2_glue = { path = "../vulkan_framework_sdl2_glue" }
vulkan_framework_glfw_glue = { path = "../vulkan_framework_glfw_glue", optional = true }
inline-spirv = "0.1.6"
"sdl2" = "*"
smallvec = "^1"

[features]
# Opt-in to building the glfw examples and glue
with-glfw = ["vulkan_framework_glfw_glue/glfw"]
