[package]
name = "vulkan_framework"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "^0"
smallvec = "^1"
parking_lot = { version = "0.12.1", optional = true }
thiserror = "2.0.12"

[features]
default = []
better_mutex = [ "parking_lot" ]
async = []
full = [ "better_mutex", "async" ]


[profile.release]
lto = true
