[package]
name = "vulkan_framework_glfw_glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "*" # +1.3.238
glfw-sys = { version = "4.0.0", optional = true }

[features]
# Do not enable glfw by default; consumers must opt-in with the `glfw` feature.
default = []
glfw = ["glfw-sys"]
